# ds4-gui

./: Cargo.toml  README.md  THIRD-PARTY-LICENSE
.github/workflows/: build-deb-and-deploy.yml  rust.yml
src/: application.rs  dual_shock_4.rs  main.rs
src/application/: calibration.rs  device_info.rs  flash.rs  font.rs  output.rs  test_commands.rs
src/dual_shock_4/: hid_report.rs
