[package]
name = "ds4-gui"
version = "0.1.0"
edition = "2021"
description = "Utilities to test and calibrate DualShock 4 controllers"

[dependencies]
clap = { version = "4.4.3", features = ["derive", "cargo", "env"] }
eframe = "0.22.0"
hex = "0.4.3"
hidapi = "2.4.1"
log = "0.4.20"
rfd = "0.11.4"
simplelog = "0.12.1"
